# ocy

./: README.md  package.json  setup_ocy.py  vercel.json  wrangler.toml
.github/workflows/: deploy-docs.yml  publish-npm.yml  publish-pypi.yml
api/: extract.js  health.js
docs/: index.html  styles.css
models/: rec_fp32_sim.onnx
public/: index.html  rec_int8.onnx
sdk/cpp/: README.md  ocy.hpp
sdk/java/: pom.xml
sdk/java/src/main/java/dev/ocy/: Ocy.java
sdk/js/: README.md  package.json
sdk/js/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/ocy/: __init__.py
sdk/python/ocy.egg-info/: PKG-INFO  SOURCES.txt
worker/: index.js
