[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocy"
version = "1.0.0"
description = "Lightweight OCR for developer screenshots — extract text from code images, terminals, and IDE windows"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Samin Yeasar" }
]
homepage = "https://github.com/solez-ai/ocy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = ["httpx>=0.24.0"]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/solez-ai/ocy"
Issues = "https://github.com/solez-ai/ocy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocy*"]